--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     margin-left: 20%;
     margin-right: 20%;
     font-size: 25px;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
     text-align: center;
 }
 
@@ -65,6 +65,8 @@ body {
     margin-right: 10%;
 }
 
+
+
 .tk-margin {
     width: 10%;
     margin-left: 5%;
@@ -73,8 +75,15 @@ body {
     padding: 10px;
 }
 
+#color-red {
+    border: 3px solid tomato;
+    background-color: rgb(254, 189, 178);
+
+}
+
 .border-new {
     margin-bottom: 50px;
+
 
 }
 
@@ -83,6 +92,7 @@ body {
     border-bottom: 1px solid blue;
     width: 50%;
     padding: 5px 10px;
+    text-align: center;
 }
 
 .flexi-third {
@@ -126,7 +136,7 @@ body {
 }
 
 .new-center {
-    margin-bottom: 20%;
+    margin-bottom: 10%;
 
 }
 
@@ -152,5 +162,22 @@ button {
     border-width: 0;
     padding: 2%;
     background-color: rgb(248, 101, 101);
+}
+
+.footer-design {
+    text-align: center;
+    padding: 2%;
+    background-color: rgb(0, 0, 34);
+    color: azure;
+    margin-bottom: 2%;
+}
+
+#text {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 30px;
+}
+
+#text-jr {
+    font-family: 'Times New Roman', Times, serif;
 
 }
