--- a/style.css
+++ b/style.css
@@ -10,31 +10,34 @@ body {
 }
 
 .pad {
-    padding: 100px;
+    padding: 180px;
     text-align: center;
 }
 
 .fonts {
-    font-size: 90px;
-    text-align: center;
+    font-size: 70px;
     color: aliceblue;
     margin-top: 2%;
-    margin-bottom: 2%;
+    margin-bottom: 4%;
 }
 
 .another-fonts {
-    font-size: 37px;
-    text-align: center;
+    font-size: 25px;
     color: aliceblue;
+}
 
+#top-margin {
+    margin-bottom: 5%;
 }
 
 .link-button {
+    font-size: 17px;
     text-decoration: none;
     color: whitesmoke;
-    background-color: tomato;
+    background-color: rgb(255, 62, 55);
     padding: 20px 30px;
     border-radius: 5px;
+
 }
 
 
@@ -58,26 +61,27 @@ body {
 }
 
 .tk-flex {
-    font-size: 20px;
+    font-size: 25px;
     display: flex;
     margin-bottom: 90px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 23%;
+    margin-right: 23%;
+
+
 }
 
-
-
 .tk-margin {
-    width: 10%;
-    margin-left: 5%;
-    margin-right: 5%;
-    background-color: rgb(217, 205, 205);
-    padding: 10px;
+    width: 50%;
+    margin-left: 2%;
+    margin-right: 2%;
+    background-color: rgb(241, 241, 241);
+    padding: 5px;
+    border-radius: 5px;
 }
 
 #color-red {
-    border: 3px solid tomato;
-    background-color: rgb(254, 189, 178);
+    border: 3px solid rgb(255, 144, 124);
+    background-color: rgb(251, 200, 190);
 
 }
 
@@ -89,7 +93,7 @@ body {
 
 .borderline {
     border: none;
-    border-bottom: 1px solid blue;
+    border-bottom: 1px solid rgb(174, 174, 174);
     width: 50%;
     padding: 5px 10px;
     text-align: center;
@@ -98,6 +102,8 @@ body {
 .flexi-third {
     display: flex;
     text-align: justify;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .text-size {
@@ -119,7 +125,7 @@ body {
     width: 90%;
     margin-left: 1%;
     margin-right: 1%;
-    padding: 5%;
+    padding: 3%;
     border-radius: 5px;
 }
 
@@ -153,31 +159,33 @@ body {
 
 .email-border {
     border: none;
-    padding: 2%;
+    padding: 3% 10%;
     background-color: rgb(220, 220, 220);
+    margin-left: 0;
 
 }
 
 button {
     border-width: 0;
-    padding: 2%;
-    background-color: rgb(248, 101, 101);
+    padding: 3%;
+    background-color: rgb(255, 87, 87);
 }
 
 .footer-design {
     text-align: center;
     padding: 2%;
-    background-color: rgb(0, 0, 34);
-    color: azure;
+    background-color: rgb(0, 0, 23);
     margin-bottom: 2%;
 }
 
 #text {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 30px;
+    color: tomato;
 }
 
 #text-jr {
     font-family: 'Times New Roman', Times, serif;
+    color: aliceblue;
 
 }
